:wrench: FIXING | Deployment configuration

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>React - AntDesign </title>
+    <title>Discussee - React</title>
   </head>
   <body>
     <div id="root"></div>
