:wrench: FIXING | Add rel icon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Discussee - React</title>
+    <link rel="icon" href="https://reactjs.org/favicon.ico"/>
   </head>
   <body>
     <div id="root"></div>
